--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,7 @@ select {
 }
 .top-news {
   display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   justify-items: start;
   gap: 2rem;
   line-height: 1.5;
